need to render gameboard to DOM and display on webpage

--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
     <title>Document</title>
   </head>
   <body>
+
+    <table id="playboard">
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+    </table>
   
 
     <script src="script.js"></script>
