--- a/index.html
+++ b/index.html
@@ -9,23 +9,21 @@
   </head>
   <body>
 
-    <table id="playboard">
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-    </table>
+    <div class="playboard">
+      <h1 class="header">Tic-Tac-Toe</h1>
+      <h2>click on a box to make a move</h2>
+      <div class="tile-box">
+          <div class="tiles" id="tile-1"></div>
+          <div class="tiles" id="tile-2"></div>
+          <div class="tiles" id="tile-3"></div>
+          <div class="tiles" id="tile-4"></div>
+          <div class="tiles" id="tile-5"></div>
+          <div class="tiles" id="tile-6"></div>
+          <div class="tiles" id="tile-7"></div>
+          <div class="tiles" id="tile-8"></div>
+          <div class="tiles" id="tile-9"></div>
+      </div>
+    </div>
   
 
     <script src="script.js"></script>
