--- a/index.html
+++ b/index.html
@@ -12,16 +12,17 @@
     <div class="playboard">
       <h1 class="header">Tic-Tac-Toe</h1>
       <h2>click on a box to make a move</h2>
+      <button id="reset">Reset</button>
       <div class="tile-box">
-          <div class="tiles" id="tile-1"></div>
-          <div class="tiles" id="tile-2"></div>
-          <div class="tiles" id="tile-3"></div>
-          <div class="tiles" id="tile-4"></div>
-          <div class="tiles" id="tile-5"></div>
-          <div class="tiles" id="tile-6"></div>
-          <div class="tiles" id="tile-7"></div>
-          <div class="tiles" id="tile-8"></div>
-          <div class="tiles" id="tile-9"></div>
+          <div class="tiles" id="tile-1" data-row="0" data-col="0"></div>
+          <div class="tiles" id="tile-2" data-row="0" data-col="1"></div>
+          <div class="tiles" id="tile-3" data-row="0" data-col="2"></div>
+          <div class="tiles" id="tile-4" data-row="1" data-col="0"></div>
+          <div class="tiles" id="tile-5" data-row="1" data-col="1"></div>
+          <div class="tiles" id="tile-6" data-row="1" data-col="2"></div>
+          <div class="tiles" id="tile-7" data-row="2" data-col="0"></div>
+          <div class="tiles" id="tile-8" data-row="2" data-col="1"></div>
+          <div class="tiles" id="tile-9" data-row="2" data-col="2"></div>
       </div>
     </div>
   
