--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
         <div class="buttons">
           <button id="start">Start new game</button>
           <button id="reset">Reset</button>
-          <input id="name" type="text"></input>
         </div>
+          <label for="name">Enter your name:</label>
+          <input name="name" id="name" type="text">
         <p class="move-output" id="output"></p>
         <p class="turn-update" id="turn-output"></p>
       </div>
