made readable for mobile

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
 
         <p class="move-output" id="output"></p>
-        <p class="turn-update" id="turn-output"></p>
+        <p class="turn-update" id="turn-output">Enter player names!</p>
       </div>
       <div class="tile-box">
           <div class="tiles" id="tile-1" data-row="0" data-col="0"></div>
